--- a/AspnetNote.MVC/Views/Shared/_Layout.cshtml
+++ b/AspnetNote.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -34,10 +36,18 @@
                 </ul>
 
                 @* Login *@
-                <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right">
+                @if (Context.Session.GetInt32("USER_LOGIN_KEY") == null)
+                {
                     <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
                     <li><a asp-area="" asp-controller="Account" asp-action="Register">Sign-in</a></li>
-                 </ul>
+                }
+                else
+                {
+                    <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                }
+
+            </ul>
             </div>
         </div>
     </nav>
