--- a/AspnetNote.MVC/Views/Shared/_Layout.cshtml
+++ b/AspnetNote.MVC/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Note" asp-action="Index">Forum</a></li>
                 </ul>
 
                 @* Login *@
